Исправление замечаний: наименование метода, приведение типов в ассертах